--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">hello world</string>
     <string name="hello_graz">Hello Graz</string>
+    <string name="change_color">change_color</string>
+    <string name="change_size">change_size</string>
 </resources>
